<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Init"
    android:background="@color/c_ScreenBackgroundDark"
>
	<LinearLayout
	    android:id="@+id/ll_top"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentRight="true"
	    android:layout_alignParentTop="true"
	    android:background="@color/c_ScreenTopBottom"
	    android:orientation="horizontal"
	    android:padding="10dp"
	>
		<ImageView
		    android:layout_width="30dp"
		    android:layout_height="30dp"
		    android:src="@drawable/logo"
		/>
		<TextView
			android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:paddingLeft="4dp"
		    android:paddingRight="4dp"
		    android:text="@string/neuereintrag_titel"
		    android:textColor="@color/c_TextColorLight"
		    android:textSize="24sp"
		/>
	</LinearLayout>
	<LinearLayout
	    android:id="@+id/ll_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_top"
        android:orientation="horizontal"
        android:padding="10dp"
    >
		<Spinner
		    android:id="@+id/typ_spinner"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		/>
	</LinearLayout>
   <LinearLayout
        android:id="@+id/ll_bp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_spinner"
        android:layout_above="@+id/ll_bottom"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:orientation="vertical"
        android:padding="10dp"
    >
		<LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	    >
			<EditText
			    android:id="@+id/neuereintrag_bp_bezeichnung"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:inputType="text"
			    android:paddingLeft="4dp"
			    android:paddingRight="4dp"
			    android:singleLine="true"
			    android:textColor="@color/c_TextColorDark"
			    android:textSize="16sp"
			    android:hint="@string/neuereintrag_bezeichnung"
			/>
		</LinearLayout>
		<LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	    >
			<EditText
			    android:id="@+id/neuereintrag_bp_benutzername"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:paddingLeft="4dp"
			    android:paddingRight="4dp"
			    android:textColor="@color/c_TextColorDark"
			    android:textSize="16sp"
			    android:singleLine="true"
			    android:inputType="text"
			    android:hint="@string/neuereintrag_bp_benutzername"
			/>
		</LinearLayout>
		<LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	    >
			<EditText
			    android:id="@+id/neuereintrag_bp_passwort"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:paddingLeft="4dp"
			    android:paddingRight="4dp"
			    android:textColor="@color/c_TextColorDark"
			    android:textSize="16sp"
			    android:singleLine="true"
			    android:inputType="text"
			    android:hint="@string/neuereintrag_bp_passwort"
			/>
		</LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_spinner"
        android:layout_above="@+id/ll_bottom"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="invisible"
    >
		<LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	    >
			<EditText
			    android:id="@+id/neuereintrag_p_bezeichnung"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:inputType="text"
			    android:paddingLeft="4dp"
			    android:paddingRight="4dp"
			    android:singleLine="true"
			    android:textColor="@color/c_TextColorDark"
			    android:textSize="16sp"
			    android:hint="@string/neuereintrag_bezeichnung"
			/>
		</LinearLayout>
		<LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	    >
			<EditText
			    android:id="@+id/neuereintrag_p_passwort"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:paddingLeft="4dp"
			    android:paddingRight="4dp"
			    android:textColor="@color/c_TextColorDark"
			    android:textSize="16sp"
			    android:singleLine="true"
			    android:inputType="number"
			    android:hint="@string/neuereintrag_p_passwort"
			/>
		</LinearLayout>
    </LinearLayout>
   <LinearLayout
        android:id="@+id/ll_f"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_spinner"
        android:layout_above="@+id/ll_bottom"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="invisible"
    >
		<LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	    >
			<EditText
			    android:id="@+id/neuereintrag_f_bezeichnung"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:inputType="text"
			    android:paddingLeft="4dp"
			    android:paddingRight="4dp"
			    android:singleLine="true"
			    android:textColor="@color/c_TextColorDark"
			    android:textSize="16sp"
			    android:hint="@string/neuereintrag_bezeichnung"
			/>
		</LinearLayout>
		<LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	    >
			<EditText
			    android:id="@+id/neuereintrag_f_passwort"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:paddingLeft="4dp"
			    android:paddingRight="4dp"
			    android:textColor="@color/c_TextColorDark"
			    android:textSize="16sp"
			    android:inputType="textMultiLine"
			    android:lines="5"
			    android:gravity="top"
			    android:hint="@string/neuereintrag_f_passwort"
			/>
		</LinearLayout>
    </LinearLayout>
    <LinearLayout
	    android:id="@+id/ll_bottom"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:background="@color/c_ScreenTopBottom"
		android:layout_alignParentBottom="true"
		android:layout_alignParentLeft="true"
		android:layout_alignParentRight="true"
		android:padding="10dp"
	>
		<Button
			android:id="@+id/neuereintrag_neu"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/neuereintrag_speichern"
			android:textSize="18sp"
		/>
	</LinearLayout>
</RelativeLayout>