<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context=".Masterpasswort"
	android:background="@color/c_ScreenBackgroundLight"
>
	<LinearLayout
	    android:id="@+id/ll_top"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentRight="true"
	    android:layout_alignParentTop="true"
	    android:background="@color/c_ScreenTopBottom"
	    android:orientation="horizontal"
	    android:padding="10dp" >

		<ImageView
		    android:layout_width="30dp"
		    android:layout_height="30dp"
		    android:src="@drawable/logo"
		/>
		<TextView
			android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:paddingLeft="4dp"
		    android:paddingRight="4dp"
		    android:text="@string/mp_titel"
		    android:textColor="@color/c_TextColorLight"
		    android:textSize="24sp"
		/>
	</LinearLayout>
	<TextView
	    android:id="@+id/mp_preview"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentRight="true"
	    android:layout_below="@+id/ll_top"
	    android:gravity="center_horizontal"
	    android:padding="10dp"
	    android:background="@color/c_TextBackground"
	    android:textColor="@color/c_TextColorLight"
	    android:password="true"
	    android:textSize="20sp"
	/>
	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentRight="true"
	    android:layout_below="@+id/mp_preview"
	    android:layout_above="@+id/ll_bottom"
	    android:gravity="center_horizontal"
	    android:orientation="vertical" >
	
		<LinearLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
			android:orientation="horizontal"
		>
			<ImageView
			    android:id="@+id/mp_button01"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			/>
	
			<ImageView
				android:id="@+id/mp_button02"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
			/>
			<ImageView
				android:id="@+id/mp_button03"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
			/>
			<ImageView
				android:id="@+id/mp_button04"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
			/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
		>
			<ImageView
				android:id="@+id/mp_button05"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
			/>
			<ImageView
				android:id="@+id/mp_button06"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
			/>
			<ImageView
				android:id="@+id/mp_button07"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
			/>
			<ImageView
				android:id="@+id/mp_button08"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
			/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
		>
			<ImageView
				android:id="@+id/mp_button09"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
			/>
			<ImageView
				android:id="@+id/mp_button10"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
			/>
			<ImageView
				android:id="@+id/mp_button11"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
			/>
			<ImageView
				android:id="@+id/mp_button12"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
			/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
		>
			<ImageView
				android:id="@+id/mp_button13"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
			/>
			<ImageView
				android:id="@+id/mp_button14"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
			/>
			<ImageView
				android:id="@+id/mp_button15"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
			/>
			<ImageView
				android:id="@+id/mp_button16"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
			/>
		</LinearLayout>
	</LinearLayout>
	<TextView
	    android:id="@+id/mp_neutext"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentRight="true"
	    android:layout_above="@+id/ll_bottom"
	    android:gravity="center_horizontal"
	    android:padding="10dp"
	    android:background="@color/c_TextBackground"
	    android:textColor="@color/c_TextColorLight"
	    android:textSize="20sp"
	    android:text="@string/mp_neutext"
	/>
	<LinearLayout
	    android:id="@+id/ll_bottom"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:background="@color/c_TextBackground"
		android:layout_alignParentBottom="true"
		android:layout_alignParentLeft="true"
		android:layout_alignParentRight="true"
		android:padding="10dp"
	>
		<Button
			android:id="@+id/mp_submit"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/mp_weiter2"
			android:onClick="mp_weiter2"
			android:textSize="18sp"
		/>
	</LinearLayout>
</RelativeLayout>